[package]
name = "ergotree-ir"
version = "0.14.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "ErgoTree IR, serialization"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-ser = { version = "^0.3.0", path = "../sigma-ser" }
sigma-util = { version = "^0.3.0", path = "../sigma-util" }
k256 = { version = "0.9.6", features = ["zeroize", "arithmetic", "ecdsa"] }
elliptic-curve = {version = "0.10.6", features = ["zeroize", "ff"]}
thiserror = "1"
# used in elliptic-curve(in ergo-lib), compiled here with WASM support
getrandom = {version = "0.2.3", features = ["js"]}
lazy_static = "1.4"
derive_more = "0.99"
impl-trait-for-tuples = "0.2.0"
proptest-derive = {version = "0.3.0", optional = true }
bs58 = "0.4.0"
base16 = "0.2.1"
num-bigint = "0.4.0"
#bounded-vec = { git = "https://github.com/ergoplatform/bounded-vec", rev="f684d78" }
bounded-vec = { version = "^0.4.0", git = "https://github.com/ergoplatform/bounded-vec", features=["serde"]}
num256 = "0.3.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
strum = "0.21"
strum_macros = "0.21"
indexmap = "1.3.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]
optional = true

[features]
default = ["json"]
arbitrary = ["proptest", "proptest-derive"]
json = ["serde", "serde_json", "serde_with", "bounded-vec/serde"]

[dev-dependencies]
sigma-test-util = { version = "^0.3.0", path = "../sigma-test-util" }
rand = "0.8.3"
pretty_assertions = "0.7.2"