[package]
name = "ergotree-macro"
version = "0.19.0"
license = "CC0-1.0"
authors = ["Timothy Ling (@kettlebell)"]
description = "Procedural macro to generate ErgoTree expressions"
repository = "https://github.com/ergoplatform/sigma-rust"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits", "visit-mut"] }
ergotree-ir = { version = "^0.19.0", path = "../ergotree-ir", features = ["arbitrary", "ergotree-proc-macro"] }