[package]
name = "gf2_192"
version = "0.21.0"
license = "CC0-1.0"
authors = ["Timothy Ling (@kettlebell)"]
description = "Arithmetic operations and polynomial interpolation over Galois fields GF(2^192)"
repository = "https://github.com/ergoplatform/sigma-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
rand = "0.8.5"
thiserror = "1"
proptest-derive = {version = "0.3.0", optional = true }

[dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "1.0.0"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]
optional = true

[features]
arbitrary = ["proptest", "proptest-derive"]
