[package]
name = "gf2_192"
version = "0.21.0"
license = "CC0-1.0"
authors = ["Timothy Ling (@kettlebell)"]
description = "Arithmetic operations and polynomial interpolation over Galois fields GF(2^192)"
repository = "https://github.com/ergoplatform/sigma-rust"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
proptest-derive = { workspace = true, optional = true }
proptest = { workspace = true , optional = true, default-features = false, features = ["std"] }

[features]
arbitrary = ["proptest", "proptest-derive"]
