[package]
name = "hir"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "HIR for ErgoScript"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[dependencies]
ast = {path = "../ast"}
syntax = {path = "../syntax"}
text-size = "1.0.0"
derive_more = "0.99"

[dev-dependencies]
parser = {path = "../parser"}
