[package]
name = "lexer"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Lexer for ErgoScript"
repository = "https://github.com/ergoplatform/sigma-rust"
exclude = [
    "proptest-regressions/*"
]

[dependencies]
logos = "0.12"
text-size = "1.1.0"
