[package]
name = "sigma-chain-c"
version = "0.1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
sigma-chain = { path = "../sigma-chain", version = "0.1.0" }

[build-dependencies]
cbindgen = "0.13.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
