[package]
name = "sigma-ios"
version = "0.1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Sigma C bindings for iOS"

[lib]
crate-type = ["staticlib"]

[dependencies]
sigma-tree = { path = "../sigma-tree", version = "0.1.0" }

[build-dependencies]
cbindgen = "0.14"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
