[package]
name = "sigma-ser"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo binary serialization primitives"
repository = "https://github.com/ergoplatform/sigma-rust"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2"
thiserror = "1"
bit-vec = "0.6.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
# wasm-bindgen-test = "0.3.10"
proptest = "0.10"
proptest-derive = "0.2"
