[package]
name = "sigma-ser"
version = "0.10.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo binary serialization primitives"
repository = "https://github.com/ergoplatform/sigma-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
bitvec = { workspace = true }
bounded-vec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
derive_more = { workspace = true }
