[package]
name = "sigma-ser"
version = "0.15.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Ergo binary serialization primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
bitvec = { workspace = true }
bounded-vec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
derive_more = { workspace = true }
