[package]
name = "sigma-tree"
version = "0.1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-ser = { path = "../sigma-ser" }
indexmap = "1.3.2"
base16 = "0.2.1"
secp256k1 = { version = "0.17.2", features = ["rand"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
proptest-derive = "0.1.2"
sigma-testutil = { path = "../sigma-testutil"}
rand = "0.6.5" # old version is a dependency for secp256k1

[dev-dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "0.9"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
