[package]
name = "sigma-tree"
version = "0.1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigma-ser = { path = "../sigma-ser" }
indexmap = "1.3.2"
base16 = "0.2.1"
k256 = {version = "0.4.2", features = ["rand", "zeroize"]}
blake2 = "0.9"
elliptic-curve = {version = "0.5.0", features = ["rand", "zeroize"]}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
thiserror = "1"
bs58 = "0.3.1"
num-bigint = "0.3.0"
rand = "0.7"

[features]
default = []
with-serde = ["serde"]

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
proptest-derive = "0.2"
sigma-testutil = { path = "../sigma-testutil"}
rand = "0.7.3"

[dev-dependencies.proptest]
# wasm support, via https://altsysrq.github.io/proptest-book/proptest/wasm.html
version = "0.10"
# The default feature set includes things like process forking which are not
# supported in Web Assembly.
default-features = false
# Enable using the `std` crate.
features = ["std"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
