[package]
name = "sigma-util"
version = "0.8.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Ergo primitives"
repository = "https://github.com/ergoplatform/sigma-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2 = "0.9"
sha2 = "0.9"


[dev-dependencies]
