[package]
name = "sigma-util"
version = "0.9.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Ergo primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake2 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
