[package]
name = "ergo-lib-c-core"
version = "0.14.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Common code for ergo-lib C and JNI bindings"
repository = "https://github.com/ergoplatform/sigma-rust"

[lib]
crate-type = ["lib"]

[dependencies]
base16 = "0.2.1"
derive_more = "0.99"
ergo-lib = { version = "^0.14.0", path = "../../ergo-lib" }
ergo-merkle-tree = { version = "0.1.0", path = "../../ergo-merkle-tree" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1"

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]

[dependencies.bounded-vec]
version = "^0.5.0"
features = ["serde"]
