[package]
name = "ergo-lib-c-core"
version = "0.16.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Common code for ergo-lib C and JNI bindings"
repository = "https://github.com/ergoplatform/sigma-rust"

[lib]
crate-type = ["lib"]

[dependencies]
base16 = "0.2.1"
derive_more = "0.99"
ergo-lib = { version = "^0.16.0", path = "../../ergo-lib"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
futures-util = "0.3"
url = "2.2"
bounded-integer = { version = "^0.5", features = ["types"] }

[dependencies.serde_with]
version = "1.9.1"
features = [ "json" ]

[dependencies.bounded-vec]
version = "^0.6.0"
features = ["serde"]

[features]
default = []
rest = ["tokio", "ergo-lib/rest"]
