[package]
name = "ergo-lib-c-core"
version = "0.26.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "Common code for ergo-lib C and JNI bindings"

[lib]
crate-type = ["lib"]

[dependencies]
base16 = { workspace = true }
derive_more = { workspace = true }
ergo-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
futures-util = "0.3"
url = { workspace = true }
bounded-integer = { workspace = true }
serde_with = { workspace = true }
bounded-vec = { workspace = true, features=["serde"] }

[features]
default = ["mnemonic_gen", "ergo-lib/compiler"]
rest = ["tokio", "ergo-lib/rest"]
mnemonic_gen = ["ergo-lib/mnemonic_gen"]
