[package]
name = "ergo-lib-c"
version = "0.14.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "C bindings for ergo-lib"
repository = "https://github.com/ergoplatform/sigma-rust"
# exclude generated C header
exclude = [
    "h/*"
]

[lib]
crate-type = ["staticlib"]

[dependencies]
ergo-lib = {version = "^0.14.0", path = "../../ergo-lib"}
ergo-lib-c-core = {version = "^0.14.0", path = "../ergo-lib-c-core"}

[build-dependencies]
cbindgen = "^0.20.0"
