[package]
name = "ergo-lib-c"
version = "0.21.1"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
repository.workspace = true
edition.workspace = true
description = "C bindings for ergo-lib"
# exclude generated C header
exclude = [
    "h/*"
]

[lib]
name = "ergo"
crate-type = ["staticlib"]

[dependencies]
ergo-lib-c-core = { version = "^0.21.1", path = "../ergo-lib-c-core" }
paste = "^1.0"

[features]
default = ["mnemonic_gen"]
rest = ["ergo-lib-c-core/rest"]
mnemonic_gen = ["ergo-lib-c-core/mnemonic_gen"]
